nav menu added in all html

--- a/cv.html
+++ b/cv.html
@@ -15,31 +15,34 @@
   <header>
     <h1>SANTIAGO ARNAU</h1>
     <p id="repaso">Pequeño repaso de mi, hecho por mi. Si no les gusta, hagan click <a
-        href="https://cdn.memegenerator.es/imagenes/memes/full/4/41/4418045.jpg" target="blank"> Aqui </a></p>
+        href="https://cdn.memegenerator.es/imagenes/memes/full/4/41/4418045.jpg" target="blank">
+        Aqui </a></p>
     <nav>
       <ul>
         <li>
-          <h3><a href="index.html"> Inicio</a></h3>
+          <a href="/"> Inicio</a>
         </li>
         <li>
-          <h3><a href="cv.html"> CV</a></h3>
+          <a href="cv.html"> CV</a>
         </li>
         <li>
-          <h3><a href="contacto.html"> Contacto</a></h3>
+          <a href="contacto.html"> Contacto</a>
         </li>
       </ul>
     </nav>
   </header>
   <img src="foto1.JPG" alt="Foto Santiago Arnau" width="130">
   <h2>Perfil Personal</h2>
-  <p><strong>Facilidad de aprendizaje, mutabilidad, capacidad de adaptación y responsabilidad.</strong> </p>
+  <p><strong>Facilidad de aprendizaje, mutabilidad, capacidad de adaptación y
+      responsabilidad.</strong> </p>
   <h2>Datos Personales</h2>
   <ul>
     <li>Fecha de Nacimiento: 12/03/1991</li>
     <li>NIE: Y8110542C</li>
     <li>Dirección: Carrer de Corsega 611</li>
     <li>Email: santi07a@gmail.com</li>
-    <li><a href="https://www.linkedin.com/in/santiago-arnau811/" target="blank">Perfil Linked In </a></li>
+    <li><a href="https://www.linkedin.com/in/santiago-arnau811/" target="blank">Perfil Linked In
+      </a></li>
   </ul>
   <h2>Experiencia Profesional</h2>
   <ul>
