--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <nav>
       <ul>
         <li>
-          <h3><a href="index.html"> Inicio</a></h3>
+          <a href="/"> Inicio</a>
         </li>
         <li>
-          <h3><a href="cv.html"> CV</a></h3>
+          <a href="cv.html"> CV</a>
         </li>
         <li>
-          <h3><a href="contacto.html"> Contacto</a></h3>
+          <a href="contacto.html"> Contacto</a>
         </li>
       </ul>
     </nav>
