--- a/contacto.html
+++ b/contacto.html
@@ -15,36 +15,41 @@
   <header>
     <h1>SANTIAGO ARNAU</h1>
     <p id="repaso">Pequeño repaso de mi, hecho por mi. Si no les gusta, hagan click <a
-        href="https://cdn.memegenerator.es/imagenes/memes/full/4/41/4418045.jpg" target="blank"> Aqui </a></p>
+        href="https://cdn.memegenerator.es/imagenes/memes/full/4/41/4418045.jpg" target="blank">
+        Aqui </a></p>
     <nav>
       <ul>
         <li>
-          <h3><a href="index.html"> Inicio</a></h3>
+          <a href="/"> Inicio</a>
         </li>
         <li>
-          <h3><a href="cv.html"> CV</a></h3>
+          <a href="cv.html"> CV</a>
         </li>
         <li>
-          <h3><a href="contacto.html"> Contacto</a></h3>
+          <a href="contacto.html"> Contacto</a>
         </li>
       </ul>
     </nav>
   </header>
   <main class="contactarse">
-    <section>
-      <p>Para contactarse conmigo a través de mi dirección de email presionar <a href="mailto:santi07a@gmail.com">
-          Aqui</a></p>
-    </section>
-    <section>
-      <p>Para comunicarse conmigo a través de una llamada y escuchar mi sensual voz, por favor presione <a
-          href="tel:+34643937546"> Aqui</a></p>
-    </section>
-    <section>
-      Si a usted no le alcanza con esto, y todavía quiere stalkearme aun más, acá le dejo la ubicación de mi hogar. <br>
+    <h2>Contacto</h2>
+    <p>
+      Para contactarse conmigo a través de mi dirección de email presionar <a
+        href="mailto:santi07a@gmail.com">
+        Aqui</a>
+    </p>
+    <p>
+      Para comunicarse conmigo a través de una llamada y escuchar mi sensual voz, por favor
+      presione <a href="tel:+34643937546"> Aqui</a>
+    </p>
+    <p>
+      Si a usted no le alcanza con esto, y todavía quiere stalkearme aun más, acá le dejo la
+      ubicación de mi hogar. <br>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.411643059352!2d2.1729847154264594!3d41.40858207926221!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2dada1ea815%3A0x51a8b486db506cd2!2sCalle%20C%C3%B3rcega%2C%20611%2C%2008025%20Barcelona!5e0!3m2!1ses-419!2ses!4v1612637477541!5m2!1ses-419!2ses"
-        width="700" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-    </section>
+        width="700" height="450" style="border:0;" allowfullscreen="" aria-hidden="false"
+        tabindex="0"></iframe>
+    </p>
   </main>
   <footer>
     <p>Todos los Izquierdos son reservados por mí<br>
