add main section to CV.html

--- a/cv.html
+++ b/cv.html
@@ -32,53 +32,55 @@
     </nav>
   </header>
   <img src="foto1.JPG" alt="Foto Santiago Arnau" width="130">
-  <h2>Perfil Personal</h2>
-  <p><strong>Facilidad de aprendizaje, mutabilidad, capacidad de adaptación y
-      responsabilidad.</strong> </p>
-  <h2>Datos Personales</h2>
-  <ul>
-    <li>Fecha de Nacimiento: 12/03/1991</li>
-    <li>NIE: Y8110542C</li>
-    <li>Dirección: Carrer de Corsega 611</li>
-    <li>Email: santi07a@gmail.com</li>
-    <li><a href="https://www.linkedin.com/in/santiago-arnau811/" target="blank">Perfil Linked In
-      </a></li>
-  </ul>
-  <h2>Experiencia Profesional</h2>
-  <ul>
-    <li>
-      <h3>Customer Representative Service</h3>Agosto 2019 - Enero 2021 .
-      Servicio de Venta y Postventa en Apple.
-    </li>
-    <li>
-      <h3>Social Media Manager</h3>Enero 2016 - Junio 2018 . L'Ascensor Coctel Bar.
-    </li>
-    <li>
-      <h3>Técnico Reparador de Ordenadores</h3>
-      Agosto 2012 - Diciembre 2015. Software y Hardware, sistemas operativos, formateos.
-    </li>
-  </ul>
-  <h2>Educación</h2>
-  <ul>
-    <li>
-      <h3>Técnico en Periodismo</h3> Universidad Nacional de San Juan
-    </li>
-    <li>
-      <h3>Técnico en Gestión Organizacional</h3> Universidad Nacional de Córdoba
-    </li>
-  </ul>
-  <h2>Idiomas</h2>
-  <ol>
-    <li>
-      <h3>Español Nativo</h3>
-    </li>
-    <li>
-      <h3>Inglés Avanzado</h3>
-    </li>
-    <li>
-      <h3>Catalán intermedio</h3>
-    </li>
-  </ol>
+  <main>
+    <h2>Perfil Personal</h2>
+    <p><strong>Facilidad de aprendizaje, mutabilidad, capacidad de adaptación y
+        responsabilidad.</strong> </p>
+    <h2>Datos Personales</h2>
+    <ul>
+      <li>Fecha de Nacimiento: 12/03/1991</li>
+      <li>NIE: Y8110542C</li>
+      <li>Dirección: Carrer de Corsega 611</li>
+      <li>Email: santi07a@gmail.com</li>
+      <li><a href="https://www.linkedin.com/in/santiago-arnau811/" target="blank">Perfil Linked In
+        </a></li>
+    </ul>
+    <h2>Experiencia Profesional</h2>
+    <ul>
+      <li>
+        <h3>Customer Representative Service</h3>Agosto 2019 - Enero 2021 .
+        Servicio de Venta y Postventa en Apple.
+      </li>
+      <li>
+        <h3>Social Media Manager</h3>Enero 2016 - Junio 2018 . L'Ascensor Coctel Bar.
+      </li>
+      <li>
+        <h3>Técnico Reparador de Ordenadores</h3>
+        Agosto 2012 - Diciembre 2015. Software y Hardware, sistemas operativos, formateos.
+      </li>
+    </ul>
+    <h2>Educación</h2>
+    <ul>
+      <li>
+        <h3>Técnico en Periodismo</h3> Universidad Nacional de San Juan
+      </li>
+      <li>
+        <h3>Técnico en Gestión Organizacional</h3> Universidad Nacional de Córdoba
+      </li>
+    </ul>
+    <h2>Idiomas</h2>
+    <ol>
+      <li>
+        <h3>Español Nativo</h3>
+      </li>
+      <li>
+        <h3>Inglés Avanzado</h3>
+      </li>
+      <li>
+        <h3>Catalán intermedio</h3>
+      </li>
+    </ol>
+  </main>
   <footer>
     <p>Todos los Izquierdos son reservados por mí<br>
       Copyright: 30/02/2000</p>
