--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="Pagina de inicio y personal">
   <link rel="stylesheet" href="estilos.css">
   <link rel="shortcut icon" href="NewProject.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Sora&display=swap" rel="stylesheet">
   <title>Santiago Arnau</title>
 </head>
 
