--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav>
       <ul>
         <li>
-          <a href="/"> Inicio</a>
+          <a href="index.html"> Inicio</a>
         </li>
         <li>
           <a href="cv.html"> CV</a>
